Working through Jira amends iPad font size & layout issues

--- a/app/sass/_variables.scss
+++ b/app/sass/_variables.scss
@@ -1,4 +1,4 @@
-$color-white: #FFFFFF; // white
+﻿$color-white: #FFFFFF; // white
 $color-bg: #F7F7F7; // base background white?
 /*$color-bg-light: #979797; // used for borders/spacers and knocked-back text etc*/
 $color-bg-light: #E7E7E7; // used for borders/spacers and knocked-back text etc
